added documentation and routes to create, edit, and delete storie
