# docs/swagger.json
@@ -207,6 +207,357 @@
           }
         }
       }
+    },
+    "/stories": {
+      "get": {
+        "tags": [
+          "Stories"
+        ],
+        "summary": "Get list of stories",
+        "operationId": "getStories",
+        "description": "Get list stories",
+        "security": [],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "page",
+            "description": "page numbering",
+            "schema": {
+              "type": "integer",
+              "example": 1
+            }
+          },
+          {
+            "in": "query",
+            "name": "perPage",
+            "description": "number of stories",
+            "schema": {
+              "type": "integer",
+              "example": 10
+            }
+          },
+          {
+            "in": "query",
+            "name": "category",
+            "description": "if you enter the country id from the database, it will display the stories of this country",
+            "schema": {
+              "type": "string",
+              "example": "68fb50c80ae91338641121f0"
+            }
+          },
+          {
+            "in": "query",
+            "name": "type",
+            "description": "if you run popular, it will display the top 3 stories",
+            "schema": {
+              "type": "string",
+              "example": "popular"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully found stories!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully found stories!"
+                    },
+                    "data": {
+                      "type": "object",
+                      "required": [
+                        "data",
+                        "page",
+                        "perPage",
+                        "totalItems",
+                        "totalPages",
+                        "hasNextPage",
+                        "hasPreviousPage"
+                      ],
+                      "properties": {
+                        "data": {
+                          "type": "array",
+                          "items": {
+                            "$ref": "#/components/schemas/stories"
+                          }
+                        },
+                        "page": {
+                          "type": "number",
+                          "example": 1
+                        },
+                        "perPage": {
+                          "type": "number",
+                          "example": 10
+                        },
+                        "totalItems": {
+                          "type": "number",
+                          "example": 4
+                        },
+                        "totalPages": {
+                          "type": "number",
+                          "example": 4
+                        },
+                        "hasNextPage": {
+                          "type": "boolean",
+                          "example": false
+                        },
+                        "hasPreviousPage": {
+                          "type": "boolean",
+                          "example": true
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "$ref": "#/components/responses/404-NotFoundError"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Stories"
+        ],
+        "summary": "Create storie",
+        "operationId": "createStories",
+        "description": "Create a storie with payload",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "img",
+                  "title",
+                  "article",
+                  "category"
+                ],
+                "properties": {
+                  "img": {
+                    "description": "Image file",
+                    "type": "string",
+                    "format": "binary"
+                  },
+                  "title": {
+                    "description": "Story titile",
+                    "type": "string",
+                    "example": "Йорданія: шлях у Петр"
+                  },
+                  "article": {
+                    "description": "Story content",
+                    "type": "string",
+                    "example": "Петра — одне з нових чудес світу, і вживу воно вражає ще більше. Ми пройшли Сік — вузький каньйон, який веде до Скарбниці, і вразилися масштабом стародавнього міста, висіченого у скелях. День минув у дослідженні храмів, амфітеатрів і гробниць. А ввечері ми залишилися на нічне шоу, коли Петра освітлюється сотнями свічок. Атмосфера була настільки чарівною, що здавалося, час повернувся на тисячі років назад."
+                  },
+                  "category": {
+                    "description": "Category id",
+                    "type": "string",
+                    "example": "6881563901add19ee16fd017"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Createa stories",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 201
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully created a stories!"
+                    },
+                    "data": {
+                      "type": "object",
+                      "$ref": "#/components/schemas/stories-post"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "404": {
+            "$ref": "#/components/responses/404-NotFoundError"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/stories/{id}": {
+      "patch": {
+        "tags": [
+          "Stories"
+        ],
+        "summary": "updating storie data",
+        "operationId": "patchStorie",
+        "description": "For partial update of storie data in the database",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "65ca67e7ae7f10c88b598384"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "img": {
+                    "description": "Image file",
+                    "type": "string",
+                    "format": "binary"
+                  },
+                  "title": {
+                    "description": "Story titile",
+                    "type": "string",
+                    "example": "Йорданія: шлях у Петр"
+                  },
+                  "article": {
+                    "description": "Story content",
+                    "type": "string",
+                    "example": "Петра — одне з нових чудес світу, і вживу воно вражає ще більше. Ми пройшли Сік — вузький каньйон, який веде до Скарбниці, і вразилися масштабом стародавнього міста, висіченого у скелях. День минув у дослідженні храмів, амфітеатрів і гробниць. А ввечері ми залишилися на нічне шоу, коли Петра освітлюється сотнями свічок. Атмосфера була настільки чарівною, що здавалося, час повернувся на тисячі років назад."
+                  },
+                  "category": {
+                    "description": "Category id",
+                    "type": "string",
+                    "example": "6881563901add19ee16fd017"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successfully patched a storie!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully patched a storie!"
+                    },
+                    "data": {
+                      "type": "object",
+                      "$ref": "#/components/schemas/stories-post"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "404": {
+            "$ref": "#/components/responses/404-NotStorie"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Stories"
+        ],
+        "summary": "Delete Storie by id",
+        "operationId": "deleteStorie",
+        "description": "Delete Storie by id",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "65ca67e7ae7f10c88b598384"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Storie deleted successfully (no storie returned)"
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "404": {
+            "$ref": "#/components/responses/404-NotStorie"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -267,6 +618,102 @@
             "example": "2025-10-12T12:44:22.681+00:00"
           }
         }
+      },
+      "stories": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "description": "Contact's id",
+            "type": "string",
+            "example": "68498236a100312bea079008"
+          },
+          "img": {
+            "description": "Link to contact's photo",
+            "type": "string",
+            "example": "https://ftp.goit.study/img/travel-blog/de37b4596c7d4a2a81a821d2bs.webp"
+          },
+          "title": {
+            "description": "Story title",
+            "type": "string",
+            "example": "Йорданія: шлях у Петру"
+          },
+          "article": {
+            "description": "description of history",
+            "type": "string",
+            "example": "Петра — одне з нових чудес світу, і вживу воно вражає ще більше. Ми пройшли Сік — вузький каньйон, який веде до Скарбниці, і вразилися масштабом стародавнього міста, висіченого у скелях. День минув у дослідженні храмів, амфітеатрів і гробниць. А ввечері ми залишилися на нічне шоу, коли Петра освітлюється сотнями свічок. Атмосфера була настільки чарівною, що здавалося, час повернувся на тисячі років назад."
+          },
+          "category": {
+            "description": "id country and country",
+            "type": "object",
+            "example": {
+              "_id": "68fb50c80ae91338641121f0",
+              "name": "Азія"
+            }
+          },
+          "ownerId": {
+            "description": "id user and user",
+            "type": "object",
+            "example": {
+              "_id": "6881563901add19ee16fd017",
+              "name": "Матвій Савченко"
+            }
+          },
+          "date": {
+            "description": "date",
+            "type": "string",
+            "example": "2025-01-10T00:00:00.000Z"
+          },
+          "favoriteCount": {
+            "description": "number of favorites",
+            "type": "number",
+            "example": 4
+          }
+        }
+      },
+      "stories-post": {
+        "type": "object",
+        "properties": {
+          "img": {
+            "description": "Link to contact's photo",
+            "type": "string",
+            "example": "https://ftp.goit.study/img/travel-blog/de37b4596c7d4a2a81a821d2bs.webp"
+          },
+          "title": {
+            "description": "Story title",
+            "type": "string",
+            "example": "Йорданія: шлях у Петру"
+          },
+          "article": {
+            "description": "description of history",
+            "type": "string",
+            "example": "Петра — одне з нових чудес світу, і вживу воно вражає ще більше. Ми пройшли Сік — вузький каньйон, який веде до Скарбниці, і вразилися масштабом стародавнього міста, висіченого у скелях. День минув у дослідженні храмів, амфітеатрів і гробниць. А ввечері ми залишилися на нічне шоу, коли Петра освітлюється сотнями свічок. Атмосфера була настільки чарівною, що здавалося, час повернувся на тисячі років назад."
+          },
+          "category": {
+            "description": "id country and country",
+            "type": "string",
+            "example": "68fb50c80ae91338641121f0"
+          },
+          "ownerId": {
+            "description": "id user and user",
+            "type": "string",
+            "example": "691319cb15eacfba23119669"
+          },
+          "favoriteCount": {
+            "description": "number of favorites",
+            "type": "number",
+            "example": 0
+          },
+          "_id": {
+            "description": "Contact's id",
+            "type": "string",
+            "example": "68498236a100312bea079008"
+          },
+          "date": {
+            "description": "date",
+            "type": "string",
+            "example": "2025-11-11T15:27:41.315Z"
+          }
+        }
       }
     },
     "responses": {
@@ -302,7 +749,8 @@
               "type": "object",
               "required": [
                 "status",
-                "message"
+                "message",
+                "data"
               ],
               "properties": {
                 "status": {
@@ -311,7 +759,80 @@
                 },
                 "message": {
                   "type": "string",
-                  "example": "Internal Server Error"
+                  "example": "Something went wrong"
+                },
+                "data": {
+                  "type": "object",
+                  "required": [
+                    "message"
+                  ],
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Internal Server Error"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "404-NotFoundError": {
+        "description": "Unauthorized error",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "required": [
+                "status",
+                "message",
+                "data"
+              ],
+              "properties": {
+                "status": {
+                  "type": "integer",
+                  "example": 404
+                },
+                "message": {
+                  "type": "string",
+                  "example": "NotFoundError"
+                },
+                "data": {
+                  "type": "object",
+                  "required": [
+                    "message"
+                  ],
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Route not found"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "404-NotStorie": {
+        "description": "Unauthorized error",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "required": [
+                "status",
+                "message"
+              ],
+              "properties": {
+                "status": {
+                  "type": "integer",
+                  "example": 404
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Storie not found"
                 }
               }
             }
