# src/validation/stories/createStorieSchema.js
@@ -1,42 +1,50 @@
 import Joi from 'joi';
+import mongoose from "mongoose";
+import { isValidObjectId } from 'mongoose';
 
-const minCharacters = 3;
-const maxCharactersTitle = 50;
-const maxCharactersArticle = 500;
+const objectIdValidator = (value, helpers) => {
+  if (!mongoose.Types.ObjectId.isValid(value)) {
+    return helpers.error("any.invalid");
+  }
+  return value;
+};
 
 export const createStorieSchema = Joi.object({
-  img: Joi.string().required(),
-  title: Joi.string().max(80)
+  img: Joi.binary().max(2 * 1024 * 1024).required()
+    .messages({
+      'binary.base': 'Image should be a binary file',
+      'binary.max': `Image file size shouldnot exceed 2 MB`,
+      'any.required': 'Image is required',
+    }),
+  title: Joi.string().min(3).max(80)
     .required()
     .messages({
       'string.base': 'Title should be a string',
       'any.required': 'Title is required',
-      'string.min': `Title should have be least than ${minCharacters}`,
-      'string.max': `Title should have be least than ${maxCharactersTitle}`,
+      'string.min': `Title should have at least {#limit} characters`,
+      'string.max': `Title should have no more than {#limit} characters`,
     }),
-  article: Joi.string().max(2500)
+  article: Joi.string().min(3).max(2500)
     .required()
     .messages({
       'string.base': 'Article should be a string',
       'any.required': 'Article is required',
-      'string.min': `Article should have be least than ${minCharacters}`,
-      'string.max': `Article should have be least than ${maxCharactersArticle}`,
+      'string.min': `Article should have at least {#limit} characters`,
+      'string.max': `Article should have no more than {#limit} characters`,
     }),
-  category: Joi.object({
-      $oid: Joi.string().hex().length(24).required(),
-  }).required(),
-  ownerId: Joi.object({
-      $oid: Joi.string().hex().length(24).required(),
-  }).required(),
-  // category: Joi.string().required().messages({
-  //   'string.base': 'Category should be a string',
-  //   'any.required': 'Category is required',
-  // }),
-  // ownerId: Joi.string().messages({
-  //   'string.base': 'OwnerId should be a string',
-  // }),
-  // date: Joi.string().required().messages({
-  //   'string.base': 'Date should be a string',
-  //   'any.required': 'Date is required',
-  // }),
+  category: Joi.string().custom(objectIdValidator, "ObjectId validation").required()
+    .messages({
+      'string.base': 'Category should be a string',
+      'any.required': 'Article is required',
+  }),
+  ownerId: Joi.string().custom((value, helper) => {
+	  if (value && !isValidObjectId(value)) {
+		  return helper.message('Parent id should be a valid mongo id');
+		  }
+		return true;
+  })
+  .messages({
+    'string.base': 'Owner id should be a string',
+    'any.required': 'Article is required',
+  })
 });
