# src/validation/stories/patchStorieSchema.js
@@ -1,28 +1,34 @@
 import Joi from 'joi';
+import mongoose from "mongoose";
 
-const minCharacters = 3;
-const maxCharactersTitle = 50;
-const maxCharactersArticle = 500;
+const objectIdValidator = (value, helpers) => {
+  if (!mongoose.Types.ObjectId.isValid(value)) {
+    return helpers.error("any.invalid");
+  }
+  return value;
+};
 
 export const patchStorieSchema = Joi.object({
-  img: Joi.binary().max(2 * 1024 * 1024),
-  title: Joi.string().messages({
-    'string.base': 'Title should be a string',
-    'string.min': `Title should have be least than ${minCharacters}`,
-    'string.max': `Title should have be least than ${maxCharactersTitle}`,
-  }),
-  article: Joi.string().messages({
-    'string.base': 'Article should be a string',
-    'string.min': `Article should have be least than ${minCharacters}`,
-    'string.max': `Article should have be least than ${maxCharactersArticle}`,
-  }),
-  category: Joi.string().messages({
-    'string.base': 'Category should be a string',
-  }),
-  ownerId: Joi.string().messages({
-    'string.base': 'OwnerId should be a string',
-  }),
-  date: Joi.string().messages({
-    'string.base': 'Date should be a string',
-  }),
+  img: Joi.binary().max(2 * 1024 * 1024)
+    .messages({
+      'binary.base': 'Image should be a binay',
+      'binary.max': `Image file size shouldnot exceed 2 MB`,
+    }),
+  title: Joi.string().min(3).max(80)
+    .messages({
+      'string.base': 'Title should be a string',
+      'string.min': `Title should have at least {#limit} characters`,
+      'string.max': `Title should have no more than {#limit} characters`,
+    }),
+  article: Joi.string().min(3).max(2500)
+    .messages({
+      'string.base': 'Article should be a string',
+      'string.min': `Article should have at least {#limit} characters`,
+      'string.max': `Article should have no more than {#limit} characters`,
+    }),
+  category: Joi.string().custom(objectIdValidator, "ObjectId validation")
+    .message({
+      'string.base': 'Category should be a string',
+      'any.invalid': 'Category must be a string',
+    }),
 });
